[gd_scene load_steps=2 format=3 uid="uid://dn0hmxdyqc8nh"]

[ext_resource type="Script" path="res://Scripts/o_auth.gd" id="1_dvoqu"]

[node name="OAuth" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_dvoqu")

[node name="SignIn" type="Button" parent="."]
layout_mode = 0
offset_left = 260.0
offset_top = 500.0
offset_right = 320.0
offset_bottom = 531.0
scale = Vector2(2, 2)
text = "Sign In"

[node name="AuthPanel" type="Panel" parent="."]
visible = false
layout_mode = 2
offset_left = 26.0
offset_top = 421.0
offset_right = 626.0
offset_bottom = 721.0

[node name="Title" type="Label" parent="AuthPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -183.5
offset_top = 30.0
offset_right = -2.5
offset_bottom = 56.0
grow_horizontal = 2
scale = Vector2(2, 2)
text = "Please Auth Code Input"

[node name="InputCode" type="LineEdit" parent="AuthPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -15.5
offset_right = 150.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2

[node name="AuthButton" type="Button" parent="AuthPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -82.5
offset_top = -95.0
offset_right = 1.5
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)
text = "Authorize"

[node name="Paste" type="Button" parent="AuthPanel"]
visible = false
layout_mode = 0
offset_left = 460.0
offset_top = 134.5
offset_right = 525.0
offset_bottom = 165.5
text = "貼り付け"

[node name="AcceptDialog" type="AcceptDialog" parent="."]

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="SignIn" to="." method="_on_sign_in_pressed"]
[connection signal="pressed" from="AuthPanel/AuthButton" to="." method="_on_auth_button_pressed"]
[connection signal="pressed" from="AuthPanel/Paste" to="." method="_on_paste_pressed"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_accept_dialog_confirmed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
